--- a/src/composer.json
+++ b/src/composer.json
@@ -6,5 +6,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "require": {
+        "phpmailer/phpmailer": "^6.6"
     }
 }
