--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "bootstrap": "4.4.1"
   }
 }
