refactor: フォーマッターの修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     "source.fixAll.stylelint": true,
     "source.fixAll.eslint": true
   },
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "[php]": {
+    "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
+  }
 }
