--- a/src/composer.json
+++ b/src/composer.json
@@ -8,6 +8,7 @@
         "phpunit/phpunit": "^9.5"
     },
     "require": {
-        "phpmailer/phpmailer": "^6.6"
+        "phpmailer/phpmailer": "^6.6",
+        "vlucas/phpdotenv": "^5.4"
     }
 }
