--- a/src/composer.json
+++ b/src/composer.json
@@ -9,6 +9,7 @@
     },
     "require": {
         "phpmailer/phpmailer": "^6.6",
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "robmorgan/phinx": "^0.12.10"
     }
 }
