--- a/.local/docker-compose-local/docker-compose.yml
+++ b/.local/docker-compose-local/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - $PWD/src:/var/www/html
       - $PWD/docker-images/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - tq-docker-template
+      - tq-twitter
     depends_on:
       - php
 
@@ -21,7 +21,7 @@ services:
     volumes:
       - $PWD/src:/var/www/html
     networks:
-      - tq-docker-template
+      - tq-twitter
 
   mysql:
     platform: linux/x86_64
@@ -32,7 +32,7 @@ services:
       - MYSQL_ROOT_PASSWORD=password
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --secure-file-priv="/docker-entrypoint-initdb.d"
     networks:
-      - tq-docker-template
+      - tq-twitter
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -48,11 +48,11 @@ services:
     volumes:
       - /sessions
     networks:
-      - tq-docker-template
+      - tq-twitter
     depends_on:
       - mysql
 
 networks:
-  tq-docker-template:
+  tq-twitter:
     external:
-      name: tq-docker-template
+      name: tq-twitter
