--- a/.local/docker-compose-local/docker-compose.yml
+++ b/.local/docker-compose-local/docker-compose.yml
@@ -26,31 +26,35 @@ services:
   mysql:
     platform: linux/x86_64
     image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      TZ: Asia/Tokyo
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --secure-file-priv="/docker-entrypoint-initdb.d"
     volumes:
       - $PWD/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --secure-file-priv="/docker-entrypoint-initdb.d"
+      - $PWD/tmp/log/mysql:/var/log/mysql
+      - mysql-data:/var/lib/mysql
     networks:
       - tq-twitter
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     environment:
-      - PMA_ARBITRARY=1
-      - PMA_HOST=mysql
-      - PMA_USER=root
-      - PMA_PASSWORD=password
-    links:
-      - mysql
+      PMA_ARBITRARY: 1
+      PMA_HOST: mysql
+      PMA_USER: root
+      PMA_PASSWORD: password
+      TZ: Asia/Tokyo
     ports:
       - '3306:80'
-    volumes:
-      - /sessions
     networks:
       - tq-twitter
     depends_on:
       - mysql
+
+volumes:
+  mysql-data:
+    external: false
 
 networks:
   tq-twitter:
